Fixed a spacing issue with the last Group Name checkbox in the "Configuration" dialog (in the "Groups" tab).

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -1295,6 +1295,10 @@ div.calendar-dialog {
         label.checkbox {
             margin-bottom: $spacing / 2 !important;
         }
+
+        div:last-child label.checkbox {
+            margin-bottom: 0 !important;
+        }
     }
 
     label.checkbox-tabbed-in {
